--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
 		"hbs": "^4.1.0",
 		"mustache": "^4.0.0",
 		"react": "^16.12.0",
-		"react-dom": "^16.12.0"
+		"react-dom": "^16.12.0",
+		"styled-components": "^5.0.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.8.3",
+		"@babel/plugin-proposal-class-properties": "^7.8.3",
 		"@babel/preset-react": "^7.8.3",
 		"@babel/register": "^7.8.3",
 		"babel-loader": "^8.0.6",
+		"babel-plugin-styled-components": "^1.10.6",
 		"nodemon": "^2.0.2",
 		"prettier": "^1.19.1",
 		"webpack": "^4.41.5",
