--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
 	"private": true,
 	"scripts": {
-		"dev": "nodemon src/server/index.js"
+		"dev": "nodemon src/server/index.js",
+		"migrate": "knex --knexfile src/server/knexfile.js migrate:latest"
 	},
 	"dependencies": {
 		"compression": "^1.7.4",
 		"esm": "^3.2.25",
 		"express": "^4.17.1",
 		"hbs": "^4.1.0",
+		"knex": "^0.20.8",
 		"mustache": "^4.0.0",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
+		"sqlite3": "^4.1.1",
 		"styled-components": "^5.0.0"
 	},
 	"devDependencies": {
