--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
 	},
 	"dependencies": {
 		"compression": "^1.7.4",
+		"dotenv": "^8.2.0",
 		"esm": "^3.2.25",
 		"express": "^4.17.1",
+		"express-session": "^1.17.0",
 		"hbs": "^4.1.0",
 		"knex": "^0.20.8",
 		"mustache": "^4.0.0",
+		"passport": "^0.4.1",
+		"passport-auth0": "^1.3.1",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"sqlite3": "^4.1.1",
