--- a/package.json
+++ b/package.json
@@ -25,8 +25,13 @@
 		"@babel/plugin-proposal-class-properties": "^7.8.3",
 		"@babel/preset-react": "^7.8.3",
 		"@babel/register": "^7.8.3",
+		"babel-eslint": "^10.0.3",
 		"babel-loader": "^8.0.6",
 		"babel-plugin-styled-components": "^1.10.6",
+		"eslint": "^6.8.0",
+		"eslint-config-prettier": "^6.9.0",
+		"eslint-plugin-prettier": "^3.1.2",
+		"eslint-plugin-react": "^7.18.0",
 		"nodemon": "^2.0.2",
 		"prettier": "^1.19.1",
 		"webpack": "^4.41.5",
