--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.1",
     "express-session": "^1.17.0",
     "hbs": "^4.1.0",
     "knex": "^0.20.8",
