--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "nodemon src/server/index.js",
+    "build": "NODE_ENV=production webpack --mode production",
     "migrate": "knex --knexfile src/server/knexfile.js migrate:latest"
   },
   "dependencies": {
